<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vievmodel"
            type="com.example.bexflow.activity.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="0dp"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="20dp">

            <EditText
                android:text="@={vievmodel.email}"
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="25dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:text="@={vievmodel.password}"
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="25dp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/txt_forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:onClick="@{vievmodel.validateLogin}"/>

            <Button
                android:id="@+id/btn_GoTo_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/sign_up"
                android:background="@drawable/button_background"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bexfa"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_above="@id/login_layout"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</layout>